--- a/test-output/old/Suite1/methods-alphabetical.html
+++ b/test-output/old/Suite1/methods-alphabetical.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fa976">  <td>23/05/24 19:36:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_LoginDDT_002@443118b0]">loginDDT</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="9fa976">  <td>23/05/24 19:36:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_LoginDDT_002@443118b0]">loginDDT</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="9fa976">  <td>23/05/24 19:36:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_LoginDDT_002@443118b0]">loginDDT</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>23/05/24 19:36:18</td>   <td>-26776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.inetbanking.testCases.TC_LoginTest_001@1bb5a082]">loginTest</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="dda9cc">  <td>23/05/24 19:36:11</td>   <td>-33791</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_LoginTest_001@1bb5a082]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="dda9cc">  <td>23/05/24 19:36:21</td>   <td>-24013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_LoginDDT_002@443118b0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="dda9cc">  <td>23/05/24 19:36:21</td>   <td>-24215</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.TC_LoginTest_001@1bb5a082]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="dda9cc">  <td>23/05/24 19:36:54</td>   <td>8344</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.TC_LoginDDT_002@443118b0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
+<tr bgcolor="cddd80">  <td>23/07/16 20:04:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomer_003.addCustomer()[pri:0, instance:com.inetbanking.testCases.TC_AddCustomer_003@128d2484]">addCustomer</td> 
+  <td>main@811301908</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>23/07/16 20:04:48</td>   <td>-8181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.TC_AddCustomer_003@128d2484]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@811301908</td>   <td></td> </tr>
+<tr bgcolor="6c77c7">  <td>23/07/16 20:05:07</td>   <td>10894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.TC_AddCustomer_003@128d2484]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@811301908</td>   <td></td> </tr>
 </table>
